add/change javadocs, remove useless dependencies